--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -368,5 +368,40 @@ input::-webkit-input-placeholder { /* Для Safari и Chrome */
     -webkit-appearance: none;
     border-radius: 9px;
     background: #32363E;
-    marg
+}
+
+.control_box{
+    background-color: #ffffff;
+    width: 400px;
+    border-radius: 9px;
+    display: inline-block;
+    margin-left: 35px;
+    margin-top: 10px;
+    font-size: 24px;
+    text-align: left;
+}
+
+.collapsible {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+}
+  
+  /* Добавить цвет фона для кнопки, если она нажата (добавить класс .active с JS), а при наведении на него курсора мыши (hover) */
+.active, .collapsible:hover {
+    background-color: #ccc;
+}
+  
+  /* Стиль складного содержимого. Примечание: скрыто по умолчанию */
+.content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;
 }
